--- a/style/default.css
+++ b/style/default.css
@@ -1,6 +1,38 @@
 
 body {
-	margin: 4px;
-	padding: 2px;
 	border: 1px solid black;
+	display: inline-block;
+	width: 99%;
+}
+
+#menu {
+	float: left;
+	border: 2px solid gray;
+	padding: 4px;
+	margin-right: 2px;
+}
+
+#menu ul {
+	margin-right: 4px;
+}
+
+#contenu {
+	border: 4px solid #443344;
+	display: inline-block;
+	width: 80%;
+}
+
+h1 {
+	margin-left: 4px;
+	margin-right: 4px;
+	
+	text-decoration: underline;
+}
+
+h2 {
+	margin-left: 3px;
+	margin-right: 3px;
+	
+	text-decoration: underline;
+	font-style: italic;
 }
