--- a/style/default.css
+++ b/style/default.css
@@ -22,6 +22,16 @@ body {
 	width: 80%;
 }
 
+.liste_detaillee li {
+	display: inline-block;
+	border: 1px solid black;
+	width: 200px;
+}
+
+.liste_detaillee li img {
+	width: 100%;
+}
+
 h1 {
 	margin-left: 4px;
 	margin-right: 4px;
