tentative de css sur l'image #17

--- a/style/default.css
+++ b/style/default.css
@@ -36,3 +36,14 @@ h2 {
 	text-decoration: underline;
 	font-style: italic;
 }
+#logo {
+position: absolute;
+display: block;
+overflow: hidden;
+margin-top: 400px;
+margin-left: 100px;
+top: 0px;}
+ 
+#logo:hover{
+top: -50px;
+transition-duration: 1s;}
